More Julian corrections

--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -17,7 +17,7 @@ As mentioned in the previous chapter an \gls{EAS} is a cascade of high-energy pa
 \section{Development}
 \label{sec:EAS_dev}
 
-As the CR particle, which is predominantly a proton, collides with the nuclei of the atmosphere ($N_2, O_2 $,etc.) it produces pions and a few kaons. The neutral pions produced almost immediately decay to pairs of photons which in turn produce electrons via the process of pair-production. These electrons can then further produce photons via bremsstrahlung initiating a chain reaction which alternates between these two processes and forms the \textit{electromagnetic component} of the shower. The charged pions can survive for a while but eventually decay to muon and a corresponding anti neutrino. These muons can either survive till the shower reaches the ground and form the \textit{muonic component} or can also decay to electron thus contributing to the electromagnetic part. The neutrinos due to their low interaction cross-section mostly survive till they reach the ground and even further. Though not causing any problem for an EAS detector such neutrinos are the biggest background for a neutrino telescope. Kaons and charged pions due to their long lifetimes can also interact with the atmospheric nuclei producing additional pions which form the \textit{hadronic component} of the shower. The hadronic component can further contribute to both the electromagnetic and muonic component as more the shower propagates lesser the overall hadronic component becomes. A schematic of all the reactions with the different components is presented in Fig.~\ref{fig:EAS_components}.
+As the CR particle, which is predominantly a proton, collides with the nuclei of the atmosphere ($N_2, O_2 $ etc.) it produces pions and also a few kaons. The neutral pions produced almost immediately decay to pairs of photons which in turn produce electrons via the process of pair-production. These electrons can then further produce photons via bremsstrahlung initiating a chain reaction which alternates between these two processes and forms the \textit{electromagnetic component} of the shower. The charged pions can survive for a while but eventually decay to muon and a corresponding anti neutrino. These muons can either survive till the shower reaches the ground and form the \textit{muonic component} or can also decay to electrons thus contributing to the electromagnetic part. The neutrinos due to their low interaction cross-section mostly survive till they reach the ground and even further. Though not causing any problem for an EAS detector such neutrinos are the biggest background for a neutrino telescope. Kaons and charged pions due to their long lifetimes can also interact with the atmospheric nuclei producing additional pions which form the \textit{hadronic component} of the shower. The hadronic component can further contribute to both the electromagnetic and muonic component as more the shower propagates lesser the overall hadronic component becomes. A schematic of all the reactions with the different components is presented in Fig.~\ref{fig:EAS_components}.
 
 To understand the cascade of particles a detailed modelling of each component is required. These models help extract the basic properties of the cascade. A simplified model describing the electromagnetic component called the Heitler's toy model, its hadronic extension, and a generalized cascade equation are all discussed below. The specific development of a neutrino induced EAS is also discussed.  
 % \begin{figure}[t!]
@@ -45,13 +45,13 @@ Such a simplified model works quite well for estimating the properties of the el
 
 \subsection{Hadronic Extension}
 \label{sec:Dev_Had}
-The Heitler model was extended by Matthews~\cite{MATTHEWS2005387} to characterize the hadronic cascades in an EAS. In his approximation when a hadron with Energy, $E$ interacts with a nucleon the total particles produced have a two-third charged component ($\pi^\pm $) and a one-third neutral component ($\pi^0$) with the initial energy equally divided based on the number fraction. The neutral component decays quickly and contributes its share of energy to the electromagnetic component. The charged hadrons, provided they have not reached their critical energy in air ($\sim$20 GeV), interact again repeating the initial process. Muons are only produced when the charged hadrons acquire an energy below the critical energy. The energy transfer for each component after $n$ generations is given as $E_{\text{had}} = \biggl(\frac{2}{3}\biggr)^n E_0$ and $E_{\text{em}} = \big[1- \biggl(  \frac{2}{3}\biggr)^n\big] \, E_0$. Deeply penetrating air shower i.e a primary with high energy and a low enough cross-section in air, results in a lower number of muons produced, and observed at ground. This fact is important as based on the ratio of muons to electrons observed at ground, the type of the primary can be estimated. The number of muons ($N_{\mu}$) can be estimated in this model directly from charged hadrons when their energy falls below the critical energy. For $n$ generations one finds, $N_{\mu} = n_{\text{ch}}^n$ where $n_{\text{ch}}$ is the number of charged hadrons and $n$ can be written as $n = \frac{\ln(E_0/E_c)}{\ln(n_{\text{tot}})}$. Generalizing by eliminating generations:
+The Heitler model was extended by Matthews~\cite{MATTHEWS2005387} to characterize the hadronic cascades in an EAS. In his approximation when a hadron with Energy, $E$, interacts with a nucleon the total particles produced have a two-third charged component ($\pi^\pm $) and a one-third neutral component ($\pi^0$) with the initial energy equally divided based on the number fraction. The neutral component decays quickly and contributes its share of energy to the electromagnetic component. The charged hadrons, provided they have not reached their critical energy in air ($\sim$20 GeV), interact again repeating the initial process. Muons are only produced when it begins to become more likely that a charged hadron will decay rather than interact. The energy transfer for each component after $n$ generations is given as $E_{\text{had}} = \biggl(\frac{2}{3}\biggr)^n E_0$ and $E_{\text{em}} = \big[1- \biggl(  \frac{2}{3}\biggr)^n\big] \, E_0$. Deeply penetrating air shower i.e. for a primary with high energy and a low cross-section in air, results in a lower number of muons produced, and observed at ground. This fact is important as based on the ratio of muons to electrons observed at ground, the type of the primary can be estimated. The number of muons ($N_{\mu}$) can be estimated in this model directly from charged hadrons when their energy falls below the critical energy. For $n$ generations one finds, $N_{\mu} = n_{\text{ch}}^n$ where $n_{\text{ch}}$ is the number of charged hadrons and $n$ can be written as $n = \frac{\ln(E_0/E_c)}{\ln(n_{\text{tot}})}$. Generalizing by eliminating generations:
 
 \begin{equation}
     N_{\mu} = \biggl(\frac{E_0}{E_c}\biggr)^{\alpha} , \, \alpha = \frac{\ln (n_{\text{ch}})}{\ln (n_{\text{tot}})}
 \end{equation}
 
-All the parameters in this model need to be estimated using detailed simulations~\cite{PhysRevD.66.033011}. $\alpha$ has been estimated to be in the range 0.82...0.9. Other factors such as production of particles which do not decay such as baryon-anti-baryon pairs~\cite{ Pierog:2006qv} can also affect the calculated values in this model. Other than the shower maximum and number of muons, the change of the depth of the shower maximum per decade in energy also called the elongation rate is given by $D_{10} = \frac{\left\langle X_{\text{max}}\right\rangle }{d\log_{10}E_0} = 2.3\lambda_r$. The elongation rate of electromagnetic showers in air is about $\approx 85\,\text{g cm}^{-2}$. The elongation rate theorem~\cite{Linsley_1977} states that the upper limit to the elongation rate for hadronic showers is also $D_{10}^{\text{em}}$ in the presence of Feynman scaling.
+All the parameters in this model need to be estimated using detailed simulations~\cite{PhysRevD.66.033011}. $\alpha$ has been estimated to be in the range 0.82...0.9. Other factors such as production of particles which do not decay such as baryon-anti-baryon pairs~\cite{ Pierog:2006qv} can also affect the calculated values in this model. The change of the depth of the shower maximum per decade in energy also called the elongation rate is given by $D_{10} = \frac{\left\langle X_{\text{max}}\right\rangle }{d\log_{10}E_0} = 2.3\lambda_r$. The elongation rate of electromagnetic showers in air is about $\approx 85\,\text{g cm}^{-2}$. The elongation rate theorem~\cite{Linsley_1977} states that the upper limit to the elongation rate for hadronic showers is also $D_{10}^{\text{em}}$ in the presence of Feynman scaling.
 
 The first interaction with the nucleon was presented in a simplified way by Matthews as the superposition model. In this model a nucleus with mass A is assumed to be a superposition of $A$ independent nucleons, each with energy $E_h = E_0/A$. With such an assumption one can reach the following conclusions:
 
