--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -269,6 +269,11 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   month     = oct,
   pages     = {L12}
 }
+@misc{Wik_mm,
+title = {Wikipedia article: Multimessenger astronomy},
+url = {https://en.wikipedia.org/wiki/Multimessenger_astronomy}
+}
+
 @article{TXS_Multi_2018,
   author        = {Aartsen, M. G. and others},
   collaboration = {IceCube, Fermi-LAT, MAGIC, AGILE, ASAS-SN, HAWC, H.E.S.S., INTEGRAL, Kanata, Kiso, Kapteyn, Liverpool Telescope, Subaru, Swift NuSTAR, VERITAS, VLA/17B-403},
