--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -197,7 +197,7 @@ Neutrino ($\nu$)~\cite{10.1063/1.2995181} (neut-neutral, ino-small) is an elemen
   \label{fig:Neutrino-spectra}
 \end{figure}
 
-Neutrinos arriving at Earth through astrophysical sources such as the Sun have also played an important role in increasing our understanding of \glspl{CR} and physics in general. The solar neutrino observations ultimately led to the postulation and discovery of neutrino oscillations. The observations of neutrinos from SN 1987A, a type II supernova in the Large Magellanic Cloud by Kamiokande II~\cite{PhysRevLett.58.1490} before the observation of any other messenger marked the dawn of non-solar neutrino astronomy and displayed the importance of neutrinos for multi-messenger physics. One of the most important experiments in this field has been the IceCube Observatory. Located at the South Pole the IceCube Observatory has revolutionized both neutrino and multi-messenger astronomy. It has led to the first detection of astrophysical neutrinos~\cite{PhysRevLett.111.021103} and provided a measurement of their spectrum for high energies~\cite{doi:10.1126/science.1242856}. It has also contributed to the study of the neutrino oscillations~\cite{Abbasi_2023_Oscillation} and could also help with $\nu$ mass hierarchy~\cite{psf2023008007}. Recently, IceCube has further found the first source of steady-state neutrinos in our cosmos which is the NGC1068~\cite{Icecube_2022} and has also led to the groundbreaking measurement of the neutrino spectrum from our Galaxy~\cite{Galactic_plane_nu_2023}. These results and their implications are discussed in more detail in section~\ref{subsec:Nuresults}. Its contributions to multi-messenger astronomy are also discussed later in section~\ref{sec:Mul-mes}. For the highest of energies, the Pierre Auger Observatory remains the only facility capable of detecting neutrinos. 
+Neutrinos arriving at Earth through astrophysical sources such as the Sun have also played an important role in increasing our understanding of \glspl{CR} and physics in general. The solar neutrino observations ultimately led to the postulation and discovery of neutrino oscillations. The observations of neutrinos from SN 1987A, a type II supernova in the Large Magellanic Cloud by Kamiokande II~\cite{PhysRevLett.58.1490} before the observation of any other messenger marked the dawn of non-solar neutrino astronomy and displayed the importance of neutrinos for multi-messenger physics. One of the most important experiments in this field has been the IceCube Observatory. Located at the South Pole it has revolutionized both neutrino and multi-messenger astronomy. It has led to the first detection of astrophysical neutrinos~\cite{PhysRevLett.111.021103} and provided a measurement of their spectrum for high energies~\cite{doi:10.1126/science.1242856}. It has also contributed to the study of the neutrino oscillations~\cite{Abbasi_2023_Oscillation} and could also help with $\nu$ mass hierarchy~\cite{psf2023008007}. Recently, IceCube has further found the first source of steady-state neutrinos in our cosmos which is the NGC1068~\cite{Icecube_2022} and has also led to the groundbreaking measurement of the neutrino spectrum from our Galaxy~\cite{Galactic_plane_nu_2023}. These results and their implications are discussed in more detail in section~\ref{subsec:Nuresults}. Its contributions to multi-messenger astronomy are also discussed later in section~\ref{sec:Mul-mes}. For the highest of energies, the Pierre Auger Observatory remains the only facility capable of detecting neutrinos. 
 Neutrinos can help to understand various astrophysical processes such as the Big Bang where the neutrinos are hypothesized to have decoupled one second after leading to \gls{CNB}~\cite{scott2024cosmicneutrinobackground} to the nuclear processes inside stellar objects. Each such process speculates a unique neutrino spectrum which can be probed with experiments to garner their viability. Figure~\ref{fig:Neutrino-spectra} shows the unified neutrino spectrum (measure and expected) with respect to energy. For this thesis, the following sections are constrained to only the neutrinos of the highest energies (\glspl{UHEnu}) above $10^{16}$ eV. How neutrinos can help decipher the mysteries of \glspl{UHECR} is also discussed below.
 
 \subsection{Origin and Propagation}
@@ -226,7 +226,7 @@ Astrophysical neutrinos are thought to be produced by or around known sources of
   \end{align}
 \end{subequations}
 
-Other interactions such as beta decay of neutrons and nuclei ($n \longrightarrow p + e^- + \bar{\nu}_{e} $, $(A, Z) \longrightarrow (A, Z-1/ Z+1) + e^{+/-} + \nu_{e} / \bar{\nu}_{e}$), electron/positron capture and $\beta$ decays can also contribute to neutrino production. In most of these scenarios the expected flux ratio per flavor can be either $ \nu_{e} : \nu_{\mu} : \nu_{\tau} = \bar{\nu_{e}}: \bar{\nu_{\mu}}: \bar{\nu_{\tau}} = (1:2:0) $ or (1:0:0) with no direct known process for $\nu_{\tau}$ production at the source. However, since neutrinos can oscillate which is a consequence of the mixing between the flavor  $\left| \nu_{\alpha} \right\rangle $ and mass eigenstates $\left| \nu_{i} \right\rangle $  of neutrinos, given by the following relation:
+Other interactions such as beta decay of neutrons and nuclei ($n \longrightarrow p + e^- + \bar{\nu}_{e} $, \\$(A, Z) \longrightarrow (A, Z-1/ Z+1) + e^{+/-} + \nu_{e} / \bar{\nu}_{e}$), electron/positron capture and $\beta$ decays can also contribute to neutrino production. In most of these scenarios the expected flux ratio per flavor can be either $ \nu_{e} : \nu_{\mu} : \nu_{\tau} = \bar{\nu_{e}}: \bar{\nu_{\mu}}: \bar{\nu_{\tau}} = (1:2:0) $ or (1:0:0) with no direct known process for $\nu_{\tau}$ production at the source. However, since neutrinos can oscillate which is a consequence of the mixing between the flavor  $\left| \nu_{\alpha} \right\rangle $ and mass eigenstates $\left| \nu_{i} \right\rangle $  of neutrinos, given by the following relation:
 \begin{equation}
 \left| \nu_{\alpha} \right\rangle  = \sum_i U_{\alpha i} \left| \nu_{i} \right\rangle,
 \end{equation}
@@ -239,11 +239,11 @@ Other interactions such as beta decay of neutrons and nuclei ($n \longrightarrow
 
 where $U_{\alpha i}$ is the mixing matrix formulated by Pontecorvo-Maki-Nakagawa-Sakata~\cite{Pontecorvo:1957qd,10.1143/PTP.28.870}. In a standard case where three neutrino flavors are considered this matrix is a 3x3 matrix parameterized by the three mixing angles ($\theta_{12},\theta_{23},\theta_{13}$) and a single phase called $\delta_{\text{CP}}$. Starting from the expected source flavor ratio one can calculate the flavor ratio at Earth by knowing the above four mentioned parameters. One example of such propagation is shown in Fig.~\ref{fig:Oscillation_ternary}. Since high energy tau neutrinos are not expected to be present in the atmospheric neutrino background the detection of such neutrinos at Earth could be an indication that the neutrino had an astrophysical origin. 
 
-Another important aspect to fully understand the origin and propagation of astrophysical neutrinos is determining their expected energies. On average the energy fraction that pions can get from the \gls*{CR} nucleons is about 20\%. These relativistic pions can then further pass on between $\sim$20-26\% depending on the flavor and type of the neutrino. Approximately, the Energy fraction for the produced neutrinos concerning the gamma and Nucleon is~\cite{Lipari_2007}:
+Another important aspect to fully understand the origin and propagation of astrophysical neutrinos is determining their expected energies. On average the energy fraction that pions can get from the \gls*{CR} nucleons is about 20\%. These relativistic pions can then further pass on between $\sim$20-26\% depending on the flavor and type of the neutrino. Approximately, the energy fraction for the produced neutrinos concerning the gamma and nucleon is~\cite{Lipari_2007}:
 \begin{equation}
   \left\langle E_{\nu} \right\rangle  \simeq  \frac{1}{2}\left\langle E_{\gamma} \right\rangle \simeq  \frac{1}{20}\left\langle E_{N} \right\rangle
 \end{equation}
-Depending on the type of source and how far the said source is one can calculate the maximum energy potential for sources. With the measurement of the diffused astrophysical flux~\cite{PhysRevD.110.022001} by IceCube up to $10^{16}$eV, these calculations can be directly constrained by measurement~\cite{Abbasi_2023_supernova_emission}. Since extragalactic sources can produce \glspl{UHECR} up to $\sim 10^{20}$eV which is corroborated by measurements of the Pierre Auger Observatory one can calculate an upper limit to the diffuse flux for neutrinos. Some of these calculations can be found in ~\cite{Condorelli_2023_starburst} for Starburst galaxies~\cite{Murase_2023}, for AGNs and ~\cite{2003ApJ...595..346Z} for Magnetars. The non-detection of UHE$\nu$s at Auger can thus also act as an important tool to constrain the production mechanisms hypothesized for these sources. The potential of this is discussed later in section~\ref{subsec:Nuresults}.   
+Depending on the type of source and how far the said source is one can calculate the maximum energy potential for sources. With the measurement of the diffused astrophysical flux~\cite{PhysRevD.110.022001} by IceCube up to $10^{16}$eV, these calculations can be directly constrained by measurement~\cite{Abbasi_2023_supernova_emission}. Since extragalactic sources can produce \glspl{UHECR} up to $\sim 10^{20}$eV which is corroborated by measurements of the Pierre Auger Observatory one can calculate an upper limit to the diffuse flux for neutrinos from some hypothesized sources such as Starburst galaxies~\cite{Condorelli_2023_starburst}, AGNs~\cite{Murase_2023} and Magnetars~\cite{2003ApJ...595..346Z}. The non-detection of UHE$\nu$s at Auger can thus also act as an important tool to constrain the production mechanisms hypothesized for these sources. The potential of this is discussed later in section~\ref{subsec:Nuresults}.   
 
 \subsubsection*{Cosmogenic Neutrinos}
 \label{subsubsec:CosmoNu}
@@ -257,17 +257,17 @@ Depending on the type of source and how far the said source is one can calculate
 
 Cosmogenic neutrinos are produced either as a consequence of the \gls{GZK} mechanism discussed in section~\ref{subsubsec:GZK} or due to the interactions of \glspl{UHECR} with \gls{EBL}. They were first suggested by Berezinsky and Zatsepin in 1969~\cite{Berezinsky:1970xj}. The processes involved are similar to those for astrophysical neutrinos albeit the proton/nuclei interact with the CMB/EBL photon instead of the photons from the radiation fields. The two main processes are the same as that for the GZK mechanism i.e. decay of charged pions produced in photo-pion production, eq.~\ref{eq:GZK} and the beta decay of neutrons and nuclei produced in photo-disintegration, eq.~\ref{eq:Pdisinteg}. \gls{CMB} mainly affects the protons~\cite{Ehlert_2024} during their propagation which form a large fraction of the \glspl{UHECR} traversing the universe while the EBL plays an important role in the case of other nuclei~\cite{Aloisio_2015}. 
 Since the processes are the same, the flavor flux expectations at Earth remain the same. However, the expected energies that the cosmogenic neutrinos can acquire differ drastically as compared to astrophysical neutrinos. The energy of neutrinos produced due to interactions with \gls*{CMB} in the case of photo-pion production is of the order of $10^{18}$eV while for the ones produced via the by-products (pions or neutrons) of photo-disintegration, it is of the order of $10^{16}$eV~\cite{Aloisio_2015}. In the case of interactions with \gls*{EBL}, this lowers to about $10^{15}$eV and $10^{14}$eV for the two types of interactions. 
-The exact properties of the neutrinos produced are directly dependent on the parent \glspl*{UHECR} that produce them. The properties of \glspl{UHECR} such as the total flux, composition, maximum energies, production spectrum at the sources and their cosmological evolution (adiabatic losses) are all crucial factors that affect the  secondary cosmogenic neutrinos produced by these \glspl*{UHECR}. A collection of some examples of the expected cosmogenic neutrino fluxes for different scenarios can be found in ~\cite{KAMPERT2012660,AlvesBatista:2018zui,Heinze:2019jou}. One example are shown in Fig.~\ref{fig:model_nu_auger_mixed}. The two distinct humps are due to the two associated production processes with the lower one being due to the neutrinos produced in beta decay of neutrons and nuclei produced by photo-disintegration. 
+The exact properties of the neutrinos produced are directly dependent on the parent \glspl*{UHECR} that produce them. The properties of \glspl{UHECR} such as the total flux, composition, maximum energies, production spectrum at the sources and their cosmological evolution (adiabatic losses) are all crucial factors that affect the  secondary cosmogenic neutrinos produced by these \glspl*{UHECR}. A collection of some examples of the expected cosmogenic neutrino fluxes for different scenarios can be found in ~\cite{KAMPERT2012660,AlvesBatista:2018zui,Heinze:2019jou}. One example are shown in Fig.~\ref{fig:model_nu_auger_mixed}. The two distinct humps are due to the two associated production processes with the lower one being due to the neutrinos produced in beta decay of neutrons and the higher one caused by nuclei produced via photo-disintegration. 
 
 Measurements of \gls*{CR} detection observatories such as the Pierre Auger Observatory can also be used to calculate an expected neutrino spectrum based on assumptions on the composition and the cosmological evolution of the sources. Neutrinos thus can act as a very important tool in constraining the composition of the incoming \glspl*{UHECR} and furthering their actual sources. They can also help to solve the question of the cutoff observed in the \gls*{UHECR} spectrum whether this is due to the \gls*{GZK} mechanism (proton-dominated composition) or sources reaching their maximum potential as theorized by Hillas (mixed composition). The current results regarding this important study are discussed in section~\ref{subsec:Nuresults}.
 \subsubsection*{Exotic Neutrinos}
 \label{subsubsec:ExoticNu}
-Neutrinos can also be produced as a result of self-annihilation or decay of dark matter particles. In dark matter annihilation scenarios, two dark matter particles come together and annihilate, leading to the production of standard model particles as a result. The specific flux of the neutrino depends on the properties of the dark matter particle. One such candidate for such a process could be a \gls{WIMP}, which is its own antiparticle (a Majorana fermion). In regions with a high concentration of dark matter, such as the centres of galaxies or galaxy clusters, \glspl{WIMP} can come together and annihilate into standard model particles~\cite{10.1111/j.1365-2966.2008.13366.x}. One of the annihilation channels of interest for producing very high-energy neutrinos is the annihilation into pairs of intermediate bosons, such as $W^+W^-$ (W-boson pair), or $Z^0 - Z^0$ (Z-boson pair). These intermediate bosons can subsequently decay into quarks, leptons, and other particles, including neutrinos. The final state neutrinos can be very high-energy, potentially reaching energies in the peta-electronvolt (PeV) range and beyond. For dark matter decay, a stable dark matter particle is supposed to spontaneously transform to other standard model particles including neutrinos~\cite{PhysRevD.108.123021}. 
+Neutrinos can also be produced as a result of self-annihilation or decay of dark matter particles. In dark matter annihilation scenarios, two dark matter particles come together and annihilate, leading to the production of standard model particles as a result. The specific flux of the neutrino depends on the properties of the dark matter particle. One such candidate for such a process could be a \gls{WIMP}, which could be its own antiparticle (a Majorana fermion). In regions with a high concentration of dark matter, such as the centres of galaxies or galaxy clusters, \glspl{WIMP} can come together and annihilate into standard model particles~\cite{10.1111/j.1365-2966.2008.13366.x}. One of the annihilation channels of interest for producing very high-energy neutrinos is the annihilation into pairs of intermediate bosons, such as $W^+W^-$ (W-boson pair), or $Z^0 - Z^0$ (Z-boson pair). These intermediate bosons can subsequently decay into quarks, leptons, and other particles, including neutrinos. The final state neutrinos can be very high-energy, potentially reaching energies in the peta-electronvolt (PeV) range and beyond. For dark matter decay, a stable dark matter particle is supposed to spontaneously transform to other standard model particles including neutrinos~\cite{PhysRevD.108.123021}. 
 
 \subsection{Neutrino Interactions and Detection}
 \label{subsec:Nuintdet}
 
-The low interaction cross-section ($\sigma_{\nu}$)~\cite{Formaggio_2012} of neutrinos which allows them to travel for large distances also makes them almost impossible to detect. They can pass through vast amounts of material without leaving a significant trace. While at low energies processes such as Inverse Beta Decay are used to detect the neutrinos, at high energies neutrinos can interact via \gls{CC} and \gls{NC} Interactions. In \gls*{CC} interaction, a neutrino interacts with a target nucleus with an exchange of a W boson, transforming into a charged lepton corresponding to the flavor of the incoming neutrino and a hadron. The NC interaction is flavor blind and occurs with an exchange of the $Z^0$ boson and a nuclear recoil. Both reactions are shown in the equations below:
+The low interaction cross-section ($\sigma_{\nu}$)~\cite{Formaggio_2012} of neutrinos which allows them to travel for large distances also makes them almost impossible to detect. They can pass through vast amounts of material without leaving a significant trace. While at low energies processes such as Inverse Beta Decay are used to detect the neutrinos, at high energies neutrinos can interact via \gls{CC} and \gls{NC} Interactions. In \gls*{CC} interaction, a neutrino interacts with a target nucleus with an exchange of a W boson, transforming into a charged lepton corresponding to the flavor of the incoming neutrino and a hadronic cascade. The NC interaction is flavor blind and occurs with an exchange of the $Z^0$ boson and a nuclear recoil. Both reactions are shown in the equations below:
 
 \begin{subequations}\label{eq:NuCC_NC}
   \begin{align}
@@ -278,8 +278,8 @@ The low interaction cross-section ($\sigma_{\nu}$)~\cite{Formaggio_2012} of neut
   \end{align}
 \end{subequations}
 
-The products from the CC and NC interaction i.e. a lepton and a hadron can be detected in multiple ways. 
-Antineutrinos can also interact with atomic electrons leading to a $W^-$ boson production called the Glashow resonance~\cite{PhysRev.118.316}. The threshold antineutrino energy for such a reaction to occur is $\sim$6.3 PeV. This process dominates the CC and NC interaction albeit only in a small energy range. Proposed in 1959, it was first observed at the IceCube Observatory~\cite{IceCube:2021rpz}. Both CC and NC when interacting with the nucleon undergo neutrino-nucleon deep inelastic scattering where the interacting neutrino scatters off individual quarks inside nucleons (protons or neutrons), leading to the fragmentation of the nucleon and the creation of hadronic (particles made of quarks) jet. At low center-of-mass energies ($\sim$TeV) accelerators can provide most of the information about the neutrino interaction with matter and the corresponding cross-section but at high energies this estimation can either only be calculated via the detection of astrophysical and cosmogenic neutrinos or via a robust theoretical estimation based on \gls{QCD}. The description of \gls*{QCD} at such high energies is still not completely understood. Moreover, physics beyond the Standard Model can also be introduced for these energies which can further affect the neutrino cross-section estimation~\cite{PhysRevD.107.033009}. For the purpose of this thesis, the neutrino cross-sections calculated in~\cite{Cooper_Sarkar_2011} are used. The reference provides an updated $\nu -N$ cross-section calculations with corresponding uncertainties, taking into account the full HERA~\cite{aaron2010combined} data release and combining it with the DGLAP~\cite{ALTARELLI1977298,Dokshitzer:1977sg,Gribov:427157} formalism of QCD. Based on the expected flux the cross-section and the energy of neutrinos it is easy to calculate minimum detector sizes for high-energy neutrinos. For example, for a neutrino of energy $E_{\nu} \sim 1\,\text{PeV} = 10^{15}\,\text{eV}$, the expected flux is $\frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{cm^2 \times 10^5 yr}$, the cross-section is $\sigma_{\nu N} \sim 10^{-8} , \sigma_{pp} \sim 10^{-33}$ and the targets can be estimated as $ N_N \sim N_A \times V/cm^3$ where $N_A$ is the Avogadro's number then the rate of expected events is given by:
+The products from the CC and NC interaction i.e. a lepton and the hadronic cascade can be detected in multiple ways. 
+Antineutrinos can also interact with atomic electrons leading to a $W^-$ boson production called the Glashow resonance~\cite{PhysRev.118.316}. The threshold antineutrino energy for such a reaction to occur is $\sim$6.3 PeV. This process dominates the CC and NC interaction albeit only in a small energy range. Proposed in 1959, it was first observed at the IceCube Observatory~\cite{IceCube:2021rpz}. Both CC and NC when interacting with the nucleon undergo neutrino-nucleon deep inelastic scattering where the interacting neutrino scatters off individual quarks inside nucleons (protons or neutrons), leading to the fragmentation of the nucleon and the creation of hadronic (particles made of quarks) jet. At low center-of-mass energies ($\sim$TeV) accelerators can provide most of the information about the neutrino interaction with matter and the corresponding cross-section but at high energies this estimation can either only be calculated via the detection of astrophysical and cosmogenic neutrinos or via a robust theoretical estimation including \gls{QCD} and low energy measurements. The description of \gls*{QCD} at such high energies is still not completely understood. Moreover, physics beyond the Standard Model can also be introduced for these energies which can further affect the neutrino cross-section estimation~\cite{PhysRevD.107.033009}. For the purpose of this thesis, the neutrino cross-sections calculated in~\cite{Cooper_Sarkar_2011} are used. The reference provides an updated $\nu -N$ cross-section calculations with corresponding uncertainties, taking into account the full HERA~\cite{aaron2010combined} data release and combining it with the DGLAP~\cite{ALTARELLI1977298,Dokshitzer:1977sg,Gribov:427157} formalism of QCD. Based on the expected flux the cross-section and the energy of neutrinos it is easy to calculate minimum detector sizes for high-energy neutrinos. For example, for a neutrino of energy $E_{\nu} \sim 1\,\text{PeV} = 10^{15}\,\text{eV}$, the expected flux is $\frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{cm^2 \times 10^5 yr}$, the cross-section is $\sigma_{\nu N} \sim 10^{-8} , \sigma_{pp} \sim 10^{-33}$ and the targets can be estimated as $ N_N \sim N_A \times V/cm^3$ where $N_A$ is the Avogadro's number then the rate of expected events is given by:
 
 \begin{equation}
   N_{\nu} \sim N_N \times \sigma_{\nu N} \times \frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{\text{yr}} \times \frac{V}{1\,\mathrm{km^3}}
@@ -297,17 +297,17 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 \end{figure}
 
 \begin{description}
-  \item \textbf{Ice and Water Cherenkov Detectors:} IceCube Neutrino Observatory~\cite{Aartsen_2017} and its predecessor AMANDA~\cite{WISCHNEWSKI1999412} are examples of in ice Cherenkov detectors. IceCube is located at the South Pole and uses a cubic-kilometer array of Antarctic ice to detect high-energy neutrinos. It consists of 80 strings carrying 60 photomultiplier detectors situated between 1500 m and 2500\,m below the surface. Neutrinos interact with the optically clear ice nuclei, producing secondary particles that emit Cherenkov radiation. The detector's photomultiplier tubes capture the Cherenkov light, allowing reconstruction of the neutrino direction and energy. Muon tracks resulting from CC interactions can also be observed. Being underground partly shields IceCube from the atmospheric neutrino background, and it can also use the Earth as a shield to look for PeV upward-going neutrinos. The Observatory also consists of a surface array (IceTop) of ice Cherenkov tanks which further help in atmospheric background rejection and CR studies. 
+  \item \textbf{Ice and Water Cherenkov Detectors:} IceCube Neutrino Observatory~\cite{Aartsen_2017} and its predecessor AMANDA~\cite{WISCHNEWSKI1999412} are examples of in ice Cherenkov detectors. IceCube is located at the South Pole and uses a cubic-kilometer array of Antarctic ice to detect high-energy neutrinos. It consists of 80 strings carrying 60 photomultiplier detectors each situated between 1500 m and 2500\,m below the surface. Neutrinos interact with the optically clear ice nuclei, producing secondary particles that emit Cherenkov radiation. The detector's photomultiplier tubes capture the Cherenkov light, allowing reconstruction of the neutrino direction and energy. Muon tracks resulting from CC interactions can also be observed. Being underground partly shields IceCube from the atmospheric neutrino background which is useful for down-going neutrinos. It can also use the Earth as a shield to look for PeV upward-going neutrinos. The Observatory also consists of a surface array (IceTop) of ice Cherenkov tanks which further help in atmospheric background rejection and CR studies. 
   
-  Water based Cherenkov detectors have been used for neutrino detection since their discovery. Kamiokande II~\cite{Arisaka:1984aoa} used a large underground water tank surrounded by PMTs to observe the first astrophysical neutrinos from SN 1987A~\cite{PhysRevLett.58.1490}. Since the required detector volume for detection of a sufficient rate of neutrinos is very large, sizeable stable natural water reservoirs are used to build such detectors. Some examples include the ANTARES~\cite{CREUSOT2013489} and KM3Net~\cite{MARGIOTTA201483} located in the Mediterranean Sea off the coast of France and the upcoming BAIKAL-GVD~\cite{MALYSHKIN2023168117} and P-ONE~\cite{P-ONE:2020ljt} located in Lake Baikal, Russia and the Pacific Ocean off the coast of British Columbia, Canada respectively. The actual detector and the principle remain the same as IceCube with the only change being the medium and upgrades in detector technology depending on the advances in the field. 
+  Water based Cherenkov detectors have been used for neutrino detection since their discovery. Kamiokande II~\cite{Arisaka:1984aoa} used a large underground water tank surrounded by PMTs to observe the first astrophysical neutrinos from SN 1987A~\cite{PhysRevLett.58.1490}. Since the required detector volume for detection of a sufficient rate of neutrinos is very large, sizeable stable natural water reservoirs are used to build such detectors. Some examples include the ANTARES~\cite{CREUSOT2013489} and KM3Net~\cite{MARGIOTTA201483} located in the Mediterranean Sea off the coast of France and Italy and the upcoming BAIKAL-GVD~\cite{MALYSHKIN2023168117} and P-ONE~\cite{P-ONE:2020ljt} located in Lake Baikal, Russia and the Pacific Ocean off the coast of British Columbia, Canada respectively. The actual detector and the principle remain the same as IceCube with the only change being the medium and upgrades in detector technology depending on the advances in the field. 
   
-  \item $-$ \textbf{Radio Detectors:} These detectors are based on the detection of the Askaryan effect~\cite{Askaryan:1961pfb,PhysRevD.84.103003} initiated by the neutrinos. The Askaryan effect is a phenomenon in which high-energy charged particles moving through a dense dielectric medium, produce coherent electromagnetic radiation in the radio frequency range.  When the high-energy particles interact with the atoms and molecules in the dielectric medium, they generate a shower of secondary charged particles. As these secondary particles move through the medium they undergo a charge separation leading to the emission of coherent Cherenkov radiation in the radio frequency range. The effect typically produces radiation in the radio frequency range, from a few hundred \gls{MHz} to several \gls{GHz}. Experiments like ANITA~\cite{ANITA:2008mzi} have tried to detect the radio emission produced when neutrinos interact with the Antarctic ice~\cite{Schoorlemmer_2016}. RNO-G ~\cite{Aguilar_2021}, an in ice radio antenna array, is also under construction at Summit Station in Greenland to search for neutrinos above PeV energies. The planned upgrade of IceCube, IceCube-Gen-2~\cite{Aartsen_2021_Gen-2} also plans to employ a large in ice radio array to increase its sensitivity to both astrophysical and cosmogenic neutrinos. 
+  \item $-$ \textbf{Radio Detectors:} These detectors are based on the detection of $\nu$s in dense media using the Askaryan effect~\cite{Askaryan:1961pfb,PhysRevD.84.103003}. It is a phenomenon in which high-energy charged particles moving through a dense dielectric medium, produce coherent electromagnetic radiation in the radio frequency range.  When the high-energy particles interact with the atoms and molecules in the dielectric medium, they generate a shower of secondary charged particles. As these secondary particles move through the medium they undergo a charge separation leading to the emission of coherent Cherenkov radiation in the radio frequency range. The effect typically produces radiation in the radio frequency range, from a few hundred \gls{MHz} to several \gls{GHz}. Experiments like ANITA~\cite{ANITA:2008mzi} have tried to detect the radio emission produced when neutrinos interact with the Antarctic ice~\cite{Schoorlemmer_2016}. RNO-G ~\cite{Aguilar_2021}, an in ice radio antenna array, is also under construction at Summit Station in Greenland to search for neutrinos above PeV energies. The planned upgrade of IceCube, IceCube-Gen-2~\cite{Aartsen_2021_Gen-2} also plans to employ a large in ice radio array to increase its sensitivity to both astrophysical and cosmogenic neutrinos. 
   
-  \item $-$ \textbf{Acoustic and Radar Echo Detectors:}  The cascade of secondary particles produced in a neutrino interaction in a medium can also generate an acoustic shockwave, also known as a "thermoacoustic pulse," due to rapid heating and expansion of the medium. The resulting acoustic signal travels through the medium as a pressure wave and can be detected by sensitive acoustic sensors. Typically, large volumes of water or ice are used as the detection medium. The acoustic signal propagates through the medium and can be detected by underwater microphones (hydrophones) or other acoustic detectors. This technique has not yet yielded a neutrino observation. It has been used at ANTARES as AMADEUS~\cite{LAHMANN2012S216} and at IceCube as SPATS~\cite{Karg_2012} to test the acoustic properties. ANDIAMO~\cite{Marinelli_2022} is a proposed acoustic neutrino detector that could use this technique in the future.
+  \item $-$ \textbf{Acoustic Detectors:}  The cascade of secondary particles produced in a neutrino interaction in a medium can also generate an acoustic shockwave, also known as a "thermoacoustic pulse," due to rapid heating and expansion of the medium. The resulting acoustic signal travels through the medium as a pressure wave and can be detected by sensitive acoustic sensors. Typically, large volumes of water or ice are used as the detection medium. The acoustic signal propagates through the medium and can be detected by underwater microphones (hydrophones) or other acoustic detectors. This technique has not yet yielded a neutrino observation. It has been used at ANTARES as AMADEUS~\cite{LAHMANN2012S216} and at IceCube as SPATS~\cite{Karg_2012} to test the acoustic properties. ANDIAMO~\cite{Marinelli_2022} is a proposed acoustic neutrino detector that could use this technique in the future.
   
-  Radar Echo Telescope~\cite{Prohira_2021} is a detector that aims to detect neutrinos using the radar echo method. The method is based on the reflection of a transmitted radar signal by the in ice neutrino cascade which acts as a short-lived mirror. The reflected signal is then detected at a receiving antenna. This technique is currently being tested in Greenland for Cosmic ray showers and might be employed to detect neutrinos in the future.
+  \item $-$ \textbf{Radar Echo Detectors:} Radar Echo Telescope~\cite{Prohira_2021} is a detector that aims to detect neutrinos using the radar echo method. The method is based on the reflection of a transmitted radar signal by the in ice neutrino cascade which acts as a short-lived mirror. The reflected signal is then detected at a receiving antenna. This technique is currently being tested in Greenland for Cosmic ray showers and might be employed to detect neutrinos in the future.
 
-  \item $-$ \textbf{Air Shower Detectors:} Even though, the typical interaction lengths of UHE$\nu$s are way larger than the atmospheric depth, neutrinos can still induce an EAS. Such EASs can develop at any point in the atmosphere, due to the virtually constant neutrino cross-section in air, in comparison to \glspl{CR} offering a distinctive aspect for detection at \gls{CR} observatories like the Pierre Auger Observatory. Pierre Auger Observatory tries to use the said property to observe EeV neutrinos. EASs and the expected signature at the Pierre Auger Observatory for both \glspl{CR} and neutrinos are discussed in the next Chapter~\ref{chap:EAS}.   
+  \item $-$ \textbf{Air Shower Detectors:} Even though, the typical interaction lengths of UHE$\nu$s are way larger than the atmospheric depth, neutrinos can still induce an EAS. Such EASs can develop at any point in the atmosphere, due to the virtually constant neutrino cross-section in air, in comparison to \glspl{CR} offering a distinctive aspect for detection at \gls{CR} observatories like the Pierre Auger Observatory. Pierre Auger Observatory uses the said property to search for EeV neutrinos. EASs and the expected signature at the Pierre Auger Observatory for both \glspl{CR} and neutrinos are discussed in the next Chapter~\ref{chap:EAS}.   
 
   \end{description}
 
@@ -332,7 +332,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
   \begin{figure}[t!]
     \centering
     \includegraphics[width=14.5cm]{thesis_figures/CRnNu/science-abg3395-f2.jpg}
-    \caption{Left:The sky region around the most significant neutrino excess spot in the Northern Hemisphere and NGC 1068. The plot shows a fine scan of the region around the hottest spot. The hotspot is marked by a yellow cross and the dot marks the position of NGC 1068. Further, 
+    \caption{Left:The sky region around the most significant neutrino excess spot in the Northern Hemisphere close to NGC 1068. The plot shows a fine scan of the region around the hottest spot. The hotspot is marked by a yellow cross and the dot marks the position of NGC 1068. Further, 
     the solid and dashed contours show the 68\% (solid) and 95\% (dashed) confidence regions of
     the hot spot localization. Right: The distribution of the squared angular distance between NGC 1068 and the reconstructed event direction. Taken from~\cite{Icecube_2022}}
     \label{fig:NGC1068_excess}
@@ -364,7 +364,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 
 \section{Multimessenger Astronomy}
   \label{sec:Mul-mes}
-Combining the various messengers via which we can see the Universe can help better understand the mechanisms behind their production and propagation. By combining the observations of various dedicated experiments for gravitational waves (LIGO/VIRGO), Gamma rays (FERMI-LAT, CTA), neutrinos (IceCube) and \glspl*{CR} (TA, Pierre Auger Observatory) a holistic overview of an astrophysical process can be gathered. The detection from one messenger/experiment and a non-detection from another can also be informative since it helps refine our understanding or might even reveal a new phenomenon~\cite{Abadie_2012,Albert_2017_GW170817}. One of the most important aspects of this field is a fast communication network via which all the different experiments can share their observations as fast as possible. Supernova Early Warning System~\cite{Al_Kharusi_2021}, established in 1999 and The Astrophysical Multimessenger Observatory Network~\cite{Smith_2013}, created in 2013 are some examples of the networks used in multi-messenger astronomy.  Some of the key observations of this field and the corresponding publications are summarized in table~\ref{tab:Multimessenger}. As mentioned in the Introduction, the Pierre Auger Observatory continues to contribute to these searches~\cite{10.3389/fspas.2019.00024}. One of the best examples of this collaboration is~\cite{2022_spatial_corr_nu_cr} where a spatial correlation search for neutrinos and \glspl*{CR} was performed as a joint effort between ANTARES, IceCube Observatory, Pierre Auger Observatory and the Telescope Array. The GW 170817~\cite{Abbott_2017} multi-messenger analysis using more than 70 observatories cemented the benefits and the potential of multimessenger astronomy. 
+Combining the various messengers via which we can see the Universe can help better understand the mechanisms behind their production and propagation. By combining the observations of various dedicated experiments for gravitational waves (LIGO/VIRGO), Gamma rays (FERMI-LAT, CTA), neutrinos (IceCube) and \glspl*{CR} (TA, Pierre Auger Observatory) a holistic overview of an astrophysical process can be gathered. The detection from one messenger/experiment and a non-detection from another can also be informative since it helps refine our understanding or might even reveal a new phenomenon~\cite{Abadie_2012,Albert_2017_GW170817}. One of the most important aspects of this field is a fast communication network via which all the different experiments can share their observations as fast as possible. Supernova Early Warning System~\cite{Al_Kharusi_2021}, established in 1999 and the Astrophysical Multimessenger Observatory Network~\cite{Smith_2013}, created in 2013 are some examples of the networks used in multi-messenger astronomy.  Some of the key observations of this field and the corresponding publications are summarized in table~\ref{tab:Multimessenger}. As mentioned in the introduction, the Pierre Auger Observatory continues to contribute to these searches~\cite{10.3389/fspas.2019.00024}. One of the best examples of this collaboration is~\cite{2022_spatial_corr_nu_cr} where a spatial correlation search for neutrinos and \glspl*{CR} was performed as a joint effort between ANTARES, the IceCube Observatory, the Pierre Auger Observatory and the Telescope Array. The GW 170817~\cite{Abbott_2017} multi-messenger analysis using more than 70 observatories cemented the benefits and the potential of multimessenger astronomy. 
 
 \begin{table}[h!]
 \centering
@@ -383,7 +383,7 @@ Combining the various messengers via which we can see the Universe can help bett
   Tidal disruption event& yes    & possible & possible & yes & AT2019dsg  AT2019fdr \\
   \hline
 \end{tabular}
-\caption{Current status of Multimessenger observations.}
+\caption{Current status of Multimessenger observations. Adapted from~\cite{Wik_mm}}.
 \label{tab:Multimessenger}
 \end{table}
 
