Some Prof. Kampert changes and rehaul of bib

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -83,7 +83,7 @@ keepaspectratio]{thesis_figures/Title.pdf}%
 %------------------------------------------------------------------------------
 % The following definitions are used to produce the title pages
 % needed at various stages
-\newcommand{\thesistitle}{Enhancing Sensitivity for Ultra-High Energy Down-Going Neutrino Detection with the Pierre Auger Observatory}
+\newcommand{\thesistitle}{Enhancing the Sensitivity for Ultra-High Energy Down-Going Neutrino Detection with the Pierre Auger Observatory}
 \newcommand*{\thesisauthor}{Srijan Sehgal}
 \newcommand*{\thesistown}{Wuppertal}
 \renewcommand*{\InstituteName}{\BUWfac}
