--- a/thesis_skel/thesis_glossary.tex
+++ b/thesis_skel/thesis_glossary.tex
@@ -27,7 +27,7 @@
 \newacronym[plural=EASs,firstplural= Extensive Air Showers (EASs)]{EAS}{EAS}{extensive air shower}
 \newacronym{VEM}{VEM}{vertical equivalent muon}
 \newacronym{MoPS}{MoPS}{Multiplicity-of-Positive-Steps}
-\newacronym{FADC}{FADC}{flash analog-to-digital converters}
+\newacronym{FADC}{FADC}{flash analog-to-digital converter}
 \newacronym{GZK}{GZK}{Greisen–Zatsepin–Kuzmi}
 \newacronym{ToT}{ToT}{time-over-threshold}
 \newacronym{ToTd}{ToTd}{Time-over-Threshold-deconvolved}
