--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -128,7 +128,7 @@ where $\gamma$ is the spectral index. The spectral index varies between 2.7 to 3
 % \end{figure}
 
 % To better deduce the features in the \gls{CR} spectrum one can scale the flux in the fig~\ref{fig:CR-spectrum} by energy. The corresponding figure is shown in fig.~\ref{fig:CR-spectrum_scaled}. 
-Below $10^{13}$eV \glspl{CR} from the Sun dominate the spectrum. The galactic or extragalactic \glspl{CR} of these energies cannot enter our solar system because of a variety of reasons. These include a combination of the Heliosphere, Termination Shock and solar modulation which block the low energy \glspl{CR}. The Heliosphere which is a region influenced by the Sun's magnetic field and solar wind acts as a protective bubble around the solar system. Beyond the Heliosphere, the solar wind interacts with the ISM creating a region of termination shock which can cause scattering and deflection for incoming low energy \glspl{CR}. Additionally, the solar activity cycle can cause changes to the Heliosphere which in turn also affects the incoming \glspl{CR}. Beyond a few GeVs the Sun as a source of \glspl{CR} drops off due to reaching its maximum acceleration potential. Between $10^{13}$eV and $10^{18}$eV the spectrum is dominated by \glspl{CR} of galactic origin. This has been verified by comparing the spectral indices of the proposed acceleration mechanisms with the measured spectrum as mentioned before. A second proof also comes from the composition of the \glspl{CR} observed in these energies, but this is discussed later. \textit{Supernovae} and \textit{supernovae remnants} remain the most promising sources which could explain their origin. The spectral index, $\gamma \sim$ 2.7 gives a good description of this region. Around $\sim5 \times 10^{15}$ one observes a steepening of the spectrum known as the \textit{knee}. At this point $\gamma$ changes from 2.7 to 3.1. This is attributed to the galactic accelerators reaching their maximum potential for accelerating protons. Above the knee, the sources are expected to reach their maximum potential for other heavier particles until galactic sources cannot accelerate \glspl{CR} any further. This point is thought to be the origin of the second knee at $\sim 10^{17}$eV. At this point the $\gamma$ changes from 3.1 to 3.3. This is theorized to be a transition region in which the spectrum is believed to change from one of galactic origin to extragalactic origin. This region ends at about $\sim 10^{18}$eV whereon the spectrum hardens noticeably to a $\gamma \sim$ 2.6, originating what is referred to as the \textit{ankle}. Further, with increasing energy the spectrum again steepens to $\gamma \sim$ 5.1 reaching an eventual cutoff. The suppression of flux at these energies and the cutoff is still not properly understood yet and could be due to the following possibilities:
+Below $10^{13}$eV \glspl{CR} from the Sun dominate the spectrum. The galactic or extragalactic \glspl{CR} of these energies cannot enter our solar system because of a variety of reasons. These include a combination of the Heliosphere, termination shock and solar modulation which block the low energy \glspl{CR}. The Heliosphere which is a region influenced by the Sun's magnetic field and solar wind acts as a protective bubble around the solar system. Beyond the Heliosphere, the solar wind interacts with the ISM creating a region of termination shock which can cause scattering and deflection for incoming low energy \glspl{CR}. Additionally, the solar activity cycle can cause changes to the Heliosphere which in turn also affects the incoming \glspl{CR}. Beyond a few GeVs the Sun as a source of \glspl{CR} drops off due to reaching its maximum acceleration potential. Between $10^{13}$eV and $10^{18}$eV the spectrum is dominated by \glspl{CR} of galactic origin. This has been verified by comparing the spectral indices of the proposed acceleration mechanisms with the measured spectrum as mentioned before. A second proof also comes from the composition of the \glspl{CR} observed in these energies, but this is discussed later. \textit{Supernovae} and \textit{supernovae remnants} remain the most promising sources which could explain their origin. The spectral index, $\gamma \sim$ 2.7 gives a good description of this region. Around $\sim5 \times 10^{15}$ one observes a steepening of the spectrum known as the \textit{knee}. At this point $\gamma$ changes from 2.7 to 3.1. This is attributed to the galactic accelerators reaching their maximum potential for accelerating protons. Above the knee, the sources are expected to reach their maximum potential for other heavier particles until galactic sources cannot accelerate \glspl{CR} any further. This point is thought to be the origin of the second knee at $\sim 10^{17}$eV. At this point the $\gamma$ changes from 3.1 to 3.3. This is theorized to be a transition region in which the spectrum is believed to change from one of galactic origin to extragalactic origin. This region ends at about $\sim 10^{18}$eV whereon the spectrum hardens noticeably to a $\gamma \sim$ 2.6, originating what is referred to as the \textit{ankle}. Further, with increasing energy the spectrum again steepens to $\gamma \sim$ 5.1 reaching an eventual cutoff. The suppression of flux at these energies and the cutoff is still not properly understood yet and could be due to the following possibilities:
 
 1. \textbf{GZK Limit:} One of the most prevalent ideas behind the suppression and the cutoff is the GZK mechanism which was discussed above. Due to the observations of \glspl{CR} above the cutoff of $\sim 10^{18.5}$eV by the Pierre Auger Observatory and a non-observance of expected composition (non-proton primaries) and neutrino flux (GZK pion decay), GZK as the only reason for the observed cutoff in the spectrum is currently disfavoured. However, tensions between the composition measurements of the Pierre Auger Observatory and the \gls{TA}~\cite{kawai2008telescope}, the second-largest \gls*{CR} observatory, make this topic still a subject of debate.
 
@@ -197,7 +197,7 @@ Neutrino ($\nu$)~\cite{10.1063/1.2995181} (neut-neutral, ino-small) is an elemen
   \label{fig:Neutrino-spectra}
 \end{figure}
 
-Neutrinos arriving at Earth through astrophysical sources such as the Sun have also played an important role in increasing our understanding of \glspl{CR} and physics in general. The solar neutrino observations ultimately led to the postulation and discovery of neutrino oscillations. The observations of neutrinos from SN 1987A, a type II supernova in the Large Magellanic Cloud by Kamiokande II~\cite{PhysRevLett.58.1490} before the observation of any other messenger marked the dawn of non-solar neutrino astronomy and displayed the importance of neutrinos for multi-messenger physics. One of the most important experiments in this field has been the IceCube Observatory. Located at the South Pole it has revolutionized both neutrino and multi-messenger astronomy. It has led to the first detection of astrophysical neutrinos~\cite{PhysRevLett.111.021103} and provided a measurement of their spectrum for high energies~\cite{doi:10.1126/science.1242856}. It has also contributed to the study of the neutrino oscillations~\cite{Abbasi_2023_Oscillation} and could also help with $\nu$ mass hierarchy~\cite{psf2023008007}. Recently, IceCube has further found the first source of steady-state neutrinos in our cosmos which is the NGC1068~\cite{Icecube_2022} and has also led to the groundbreaking measurement of the neutrino spectrum from our Galaxy~\cite{Galactic_plane_nu_2023}. These results and their implications are discussed in more detail in section~\ref{subsec:Nuresults}. Its contributions to multi-messenger astronomy are also discussed later in section~\ref{sec:Mul-mes}. For the highest of energies, the Pierre Auger Observatory remains the only facility capable of detecting neutrinos. 
+Neutrinos arriving at Earth through astrophysical sources such as the Sun have also played an important role in increasing our understanding of \glspl{CR} and physics in general. The solar neutrino observations ultimately led to the postulation and discovery of neutrino oscillations. The observations of neutrinos from SN 1987A, a type II supernova in the Large Magellanic Cloud by Kamiokande II~\cite{PhysRevLett.58.1490} before the observation of any other messenger marked the dawn of non-solar neutrino astronomy and displayed the importance of neutrinos for multi-messenger physics. One of the most important experiments in this field has been the IceCube Observatory. Located at the South Pole it has revolutionized both neutrino and multi-messenger astronomy. It has led to the first detection of astrophysical neutrinos~\cite{PhysRevLett.111.021103} and provided a measurement of their spectrum for high energies~\cite{doi:10.1126/science.1242856}. It has also contributed to the study of the neutrino oscillations~\cite{Abbasi_2023_Oscillation} and could also help with $\nu$ mass hierarchy~\cite{psf2023008007}. Recently, IceCube has further found indications for the first source of steady-state neutrinos in our cosmos which is the NGC1068~\cite{Icecube_2022} and has also led to the groundbreaking measurement of the neutrino spectrum from our Galaxy~\cite{Galactic_plane_nu_2023}. These results and their implications are discussed in more detail in section~\ref{subsec:Nuresults}. Its contributions to multi-messenger astronomy are also discussed later in section~\ref{sec:Mul-mes}. For the highest of energies, the Pierre Auger Observatory remains the only facility capable of detecting neutrinos. 
 Neutrinos can help to understand various astrophysical processes such as the Big Bang where the neutrinos are hypothesized to have decoupled one second after leading to \gls{CNB}~\cite{scott2024cosmicneutrinobackground} to the nuclear processes inside stellar objects. Each such process speculates a unique neutrino spectrum which can be probed with experiments to garner their viability. Figure~\ref{fig:Neutrino-spectra} shows the unified neutrino spectrum (measure and expected) with respect to energy. For this thesis, the following sections are constrained to only the neutrinos of the highest energies (\glspl{UHEnu}) above $10^{16}$ eV. How neutrinos can help decipher the mysteries of \glspl{UHECR} is also discussed below.
 
 \subsection{Origin and Propagation}
