--- a/thesis_skel/thesis_follow.tex
+++ b/thesis_skel/thesis_follow.tex
@@ -5,7 +5,7 @@
 \label{chap:follow-up}
 %==============================================================================
 
-One of the most exciting fields of modern day neutrino astrophysics involves scanning the observable sky to look for neutrino sources. As mentioned in section~\ref{subsubsec:Nusources} the observation of TXS 0506+056~\cite{Icecube_txs} and NGC 1068~\cite{Icecube_2022} which are examples of a transient source and a steady state of neutrinos has brought unprecedented excitement to the field. Any observation of a neutrino source offers a chance to significantly increase our overall knowledge about astroparticle physics. Since the Pierre Auger Observatory is one of the few experiments in the world sensitive to UHE$\nu$s (E > $10^{16}$eV), any improvement in its point source sensitivity increases its capability for neutrino detection. 
+One of the most exciting fields of modern day neutrino astrophysics involves scanning the observable sky to look for neutrino sources. As mentioned in section~\ref{subsubsec:Nusources} the reported evidence of TXS 0506+056~\cite{Icecube_txs} and NGC 1068~\cite{Icecube_2022} which are examples of a transient source and a steady state of neutrinos has brought unprecedented excitement to the field. Any observation of a neutrino source offers a chance to significantly increase our overall knowledge about astroparticle physics. Since the Pierre Auger Observatory is one of the few experiments in the world sensitive to UHE$\nu$s ($E$ > $10^{16}$eV), any improvement in its point source sensitivity increases its capability for neutrino detection. 
 
 In this chapter, the point source sensitivity to $\nu$ events of the SD array is discussed for the zenith angular range explored in this thesis, DG$_{\text{low}}$. Based on the zero neutrino candidates found in the search performed in this work, a source declination ($\delta$) dependent neutrino flux is calculated. This process includes calculating the declination dependent exposure and then converting it to a limit on the flux. The improvements to this exposure and sensitivity by the inclusion of new triggers is also discussed. Finally, the new limit is used to scan a few interesting sources which lie in the most sensitive range for the DG$_{\text{low}}$ region.
 
@@ -17,7 +17,7 @@ In this chapter, the point source sensitivity to $\nu$ events of the SD array is
 The \gls{FOV} of the Observatory and the corresponding neutrino efficiency is related to the zenith angle which in turn is related to the declination. For a given point-like source at declination, $\delta$ and right ascension, $\alpha$ (in equatorial coordinates), the time zenith angle which is the $\theta$ dependence at a certain time, $t$ is given by:
 \begin{equation}
   \label{eq:zenith_angle_time}
-  \cos \theta(\text{t}) = \sin \lambda \,\sin \delta+ \cos \lambda \, \cos \delta \,\sin (2\pi \frac{\text{t}}{\text{T}} - \alpha)
+  \cos \theta(t) = \sin \lambda \,\sin \delta+ \cos \lambda \, \cos \delta \,\sin (2\pi \frac{t}{T} - \alpha)
 \end{equation} 
 where $T$ is the duration of one sidereal day and $\lambda$ is the latitude of the observer ($\lambda = -35.2^{\circ}$ for Pierre Auger Observatory). 
 
@@ -28,7 +28,7 @@ where $T$ is the duration of one sidereal day and $\lambda$ is the latitude of t
   \label{fig:Auger_FoV}
 \end{figure}
 
-Fig.~\ref{fig:Auger_FoV} shows the FOV bands for different neutrino search channels (DG$\mathrm{_{\text{low}}}$, DG$\mathrm{_{\text{high}}}$, ES). These bands are plotted in equatorial coordinates as a function of $\mathrm{\alpha - t _{GS}}$ where $\mathrm{t_{GS}}$ is the Greenwich Sidereal Time (GST) converted to angle for a mean longitude of the Observatory, $l$ calculated as $\mathrm{t_{GS}= 2\pi t/T + l}$. The sensitive declination ranges for different $\mathrm{t_{GS}}$ can be read from the plot which is very useful for real-time transient follow-up. For DG$\mathrm{_{\text{low}}}$ showers the SD of the Pierre Auger Observatory is sensitive to declinations between $\delta \simeq [-85^{\circ} - 40^{\circ}]$. Another way to denote sky coverage for different neutrino searches at Auger is by calculating the time a source is visible to the Observatory for a particular declination. This is plotted in Fig.~\ref{fig:time_per_day} for all three search channels. As it can be seen from the plot all three channels are the most sensitive at two ends of their sensitive declination ranges (DG$\mathrm{_{\text{low}}}$-$\delta \simeq [-70^{\circ}, 35^{\circ}]$) which is a consequence of smaller variation in zenith angle in time for certain directions. The sensitivity sharply decreases beyond these declination values. In the middle of these \textit{two horns} is a plateau like region. It is also seen that generally the fraction of time in which a source is visible is comparable in the DG$\mathrm{_{\text{low}}}$ and DG$\mathrm{_{\text{high}}}$ channel with both being higher than the ES channel due to the size of the zenith angle windows. The fraction of visible time for vertical showers is also plotted. Even though this fraction of time is significantly high, currently no neutrino search is performed for this region as it is very difficult to differentiate between a cosmic ray and neutrino EAS for this zenith angle range.
+Fig.~\ref{fig:Auger_FoV} shows the FOV bands for different neutrino search channels (DG$\mathrm{_{\text{low}}}$, DG$\mathrm{_{\text{high}}}$, ES). These bands are plotted in equatorial coordinates as a function of $\alpha - t _{\text{GS}}$ where $t_{\text{GS}}$ is the Greenwich Sidereal Time (GST) converted to angle for a mean longitude of the Observatory, $l$ calculated as $t_{\text{GS}}= 2\pi t/T + l$. The sensitive declination ranges for different $t_{\text{GS}}$ can be read from the plot which is very useful for real-time transient follow-up. For DG$\mathrm{_{\text{low}}}$ showers the SD of the Pierre Auger Observatory is sensitive to declinations between $\delta \simeq [-85^{\circ} - 40^{\circ}]$. Another way to denote sky coverage for different neutrino searches at Auger is by calculating the time a source is visible to the Observatory for a particular declination. This is plotted in Fig.~\ref{fig:time_per_day} for all three search channels. As it can be seen from the plot all three channels are the most sensitive at two ends of their sensitive declination ranges (DG$\mathrm{_{\text{low}}}$-$\delta \simeq [-70^{\circ}, 35^{\circ}]$) which is a consequence of smaller variation in zenith angle in time for certain directions. The sensitivity sharply decreases beyond these declination values. In the middle of these \textit{two horns} is a plateau like region. It is also seen that generally the fraction of time in which a source is visible is comparable in the DG$\mathrm{_{\text{low}}}$ and DG$\mathrm{_{\text{high}}}$ channel with both being higher than the ES channel due to the size of the zenith angle windows. The fraction of visible time for vertical showers is also plotted. Even though this fraction of time is significantly high, currently no neutrino search is performed for this region as it is very difficult to differentiate between a cosmic ray and neutrino EAS for this zenith angle range.
 
 
 \begin{figure}[t!]
@@ -106,10 +106,10 @@ The point source flux is assumed to be independent of time and is characterized 
 
 \begin{equation}
   \label{eq:point_flux_limit}
-  k_{\text{PS}}^{90\%CL} = \frac{N_{\text{Up}}}{\int_{E_{\text{min}}}^{E_{\text{max}}} E_{\nu}^{-2} \, \xi(E_{\nu}, \delta) \, dE_{\nu}}.
+  k_{\text{PS}}^{90\%CL} = \frac{N_{\text{up}}}{\int_{E_{\text{min}}}^{E_{\text{max}}} E_{\nu}^{-2} \, \xi(E_{\nu}, \delta) \, dE_{\nu}}.
 \end{equation}
 
-For this study initially a time period from 1 Jan 2014 till 31 December 2021 is selected. The N$_{\text{Up}}$ = 2.39 is calculated according to the Conrad approach as mentioned in section~\ref{subsec:Conrad}. The exposure is assumed to be uniform within $\pm 0.6\%$ for the time period of search as shown in~\cite{PierreAuger:2017pzq}. 
+For this study initially a time period from 1 Jan 2014 till 31 December 2021 is selected. The $N_{\text{up}}$ = 2.39 is calculated according to the Conrad approach as mentioned in section~\ref{subsec:Conrad}. The exposure is assumed to be uniform within $\pm 0.6\%$ for the time period of search as shown in~\cite{PierreAuger:2017pzq}. 
 
 \begin{figure}[t!]
   \centering
@@ -140,7 +140,7 @@ A cross-check of the diffuse limit is obtained from the point source analysis by
 
 The diffuse limit can be written as:
 \begin{equation}
-  k_{\text{PS}}^{90\% \text{CL}} < \frac{N_{\text{Up}}}{\int_{\log_{10}E_{\text{min}}}^{\log_{10}E_{\text{max}}} \int_{-\pi/2}^{\pi/2}2\pi \cdot \cos(\delta) \cdot E_{\nu}^{-1} \cdot \xi(E_{\nu}, \delta) \cdot ln(10) \cdot d(\log_{10}(E_{\nu})) \cdot d\delta} .
+  k_{\text{PS}}^{90\% \text{CL}} < \frac{N_{\text{up}}}{\int_{\log_{10}E_{\text{min}}}^{\log_{10}E_{\text{max}}} \int_{-\pi/2}^{\pi/2}2\pi \cdot \cos(\delta) \cdot E_{\nu}^{-1} \cdot \xi(E_{\nu}, \delta) \cdot \ln(10) \cdot d(\log_{10}(E_{\nu})) \cdot d\delta} .
 \end{equation}
 
 The diffuse limit from point source analysis is given as: 
@@ -165,7 +165,7 @@ The limit obtained in this analysis was then used to constraint some interesting
   \centering
   \begin{tabular}{|c|c|c|c|c|}
     \hline
-    Source & Type & Dec. & R.A. & k$^{\text{90\%CL}}_{PS} \times 10^{-7}$ \\
+    Source & Type & Dec. & R.A. & $k^{\text{90\%CL}}_{PS} \times 10^{-7}$ \\
     & & (deg) & (deg) & (GeV cm$^{-2}$ s$^{-1}$ sr$^{-1}$) \\
     \hline
     NGC 2060 & SNR & -69.2 & 84.4 & 4.73 \\
