Bib overhaul complete

--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -15,7 +15,7 @@ The strategy and method to detect neutrino showers in this angular range with th
 \begin{figure}[t!]
   \centering
   \includegraphics[width=0.75\textwidth]{thesis_figures/Nu_analysis/Signal_trace_comp.png}
-  \caption{FADC trace comparison for stations at 1\,km distance from the shower core. The first and second panel indicate a station belonging to a cosmic ray like event for two different zenith angles. The last panel indicates a station trace for a neutrino simulated event. The Area over Peak is also indicated for each event for comparison. Taken from~\cite{Aab_2019_diffuse}}
+  \caption{FADC trace comparison for stations at 1\,km distance from the shower core. The first and second panel indicate a station belonging to a cosmic ray like event for two different zenith angles. The last panel indicates a station trace for a neutrino simulated event. The Area over Peak is also indicated for each event for comparison. Taken from~\cite{Aab_2019_diffuse}.}
   \label{fig:Signal_trace_comp}
 \end{figure}
 
