--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -115,7 +115,7 @@ Apart from the shower maximum and the number of muons at ground other observable
 \end{figure}
 
 $X_0$ and $\lambda$ can be estimated by fitting the profile based on the above function and depend on the composition and energy of the primary. $N_{\text{max}}$ is the number of particles observed at $X_{\text{max}}$. The integral of the longitudinal development profile gives an estimate of the total calorimetric energy deposited by the shower. 
-The point where the shower axis vector intersects the ground is called the \textit{shower core}. The shower axis is thus defined by the zenith angle $\theta$, azimuth angle $\phi$ and the shower core position. If one looks at the shower head on, the large thin disc like appearance consisting of highly energetic particles is called the \textit{shower front}. The shape is due to the path length differences between the shower particles travelling away from the shower axis to the one travelling in the direction of the shower axis. The disc is thus thinner near the shower core and widens away from it. As the shower front intersects the ground, the density and the timing of the particles detected at the detector form what is called the \textit{shower footprint}. It is the primary observable used by a ground level EAS detector to measure and characterize the shower. The arrival time of the particles in the footprint can help determine the shower geometry whereas the density can be used to reconstruct the energy of the primary. The density is estimated as a function of the radial distance from the shower core on the ground, by the \gls{LDF}. The modern LDF function is an extension on the parameterization given by Greisen~\cite{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431} and by Kamata and Nishimura~\cite{10.1143/PTPS.6.93} and is described as:
+The point where the shower axis vector intersects the ground is called the \textit{shower core}. The shower axis is thus defined by the zenith angle $\theta$, azimuth angle $\phi$ and the shower core position. If one looks at the shower head on, the large thin disc like appearance consisting of highly energetic particles is called the \textit{shower front}. The shape is due to the path length differences between the shower particles travelling away from the shower axis to the one travelling in the direction of the shower axis. The disc is thus thinner near the shower core and widens away from it. As the shower front intersects the ground, the density and the timing of the particles detected at the detector form what is called the \textit{shower footprint}. It is the primary observable used by a ground level EAS detector to measure and characterize the shower. The arrival time of the particles in the footprint can help determine the shower geometry whereas the density can be used to reconstruct the energy of the primary. The density is estimated as a function of the radial distance from the shower core on the ground, by the \gls{LDF}. The modern LDF function is an extension on the parameterization given by Greisen~\cite{Greisen:1960wc} and by Kamata and Nishimura~\cite{10.1143/PTPS.6.93} and is described as:
 \begin{equation}
     \label{eq:Lateral_dist_func}
     \rho_e(r) = \frac{N_e}{2 \pi R_M^2} C(s) \biggl(\frac{r}{R_M}\biggr)^{(s-2)}\biggl(\frac{r}{R_M}+1\biggr)^{(s-4.5)},
@@ -146,7 +146,7 @@ Charged particles moving through the atmosphere can also produce Cherenkov light
 \begin{figure}[t!]
     \centering
     \includegraphics[width=14.5cm]{thesis_figures/EAS/EAS-Detection-Techniques-mine.pdf}
-    \caption{Sketch of various ways to study experimentally extensive air showers. Inspired from~\cite{article_2001_kampert}} 
+    \caption{Sketch of various ways to study experimentally extensive air showers. Inspired from~\cite{article_2001_kampert}}. 
     \label{fig:EAS_det_techniques}
 \end{figure}
 
