--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -7,7 +7,7 @@
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{thesis_figures/Setup/map_srij_version.pdf}
-\caption{Layout of the Pierre Auger Observatory in Argentina. The black lines indicate the field of view of each telescope. Redone from~\cite{Jannis_thesis} }
+\caption{Layout of the Pierre Auger Observatory in Argentina. The black lines indicate the field of view of each telescope. Redone from~\cite{Jannis_thesis}. }
 \label{fig:Auger_map}
 \end{figure}
 
@@ -43,7 +43,7 @@ The Fluorescence Detector system at the Pierre Auger Observatory consists of an 
   \centering
   \subcaptionbox{An artistic drawing inspired by the FD building at Los Leones.\label{sub:fig:FD_site_drawing}}{\includegraphics[width=.45\linewidth]{thesis_figures/Setup/FD_outside_drawing.png}}
   \hfill
-  \subcaptionbox{Schematic view of a fluorescence telescope with a description of its main components taken from~\cite{Auger:2015}\label{sub:fig:FD_schematic}}{\includegraphics[width=.45\linewidth]{thesis_figures/Setup/FD_schematic.png}}
+  \subcaptionbox{Schematic view of a fluorescence telescope with a description of its main components. Taken from~\cite{Auger:2015}.\label{sub:fig:FD_schematic}}{\includegraphics[width=.45\linewidth]{thesis_figures/Setup/FD_schematic.png}}
   \caption{Fluorescence Telescope at Pierre Auger Observatory}
   \label{fig:FD_sketch_schematic}
 \end{figure}
@@ -79,7 +79,7 @@ The PMT signals in the WCDs are digitized by a 40 MHz 10 bit \textit{\acrlongpl
   PMTs above the electronic noise threshold, while the dashed red line
   represents the reference measurement done by an external muon telescope.
   The first peak in the charge histogram is noise from low-energy particles. The second peak is caused by the vertical-through going muons and is used to determine VEM. Right: The pulse height histogram (black) that is
-  used to calibrate $I^{\text{peak}}_{\text{VEM}}$ which is used for trigger thresholds. The calibration is again performed using the reference measurements from the muon telescope.~\cite{PierreAuger:2005znw}}
+  used to calibrate $I^{\text{peak}}_{\text{VEM}}$ which is used for trigger thresholds. The calibration is again performed using the reference measurements from the muon telescope. Taken from~\cite{PierreAuger:2005znw}.}
   \label{fig:SD_VEM_calib}
 \end{figure}
 
@@ -131,7 +131,7 @@ The ToTd trigger was first proposed internally in~\cite{gap_note_2009}. The trig
   \hfill
   \subcaptionbox{The deconvolution of the initial ToTd waveform along with the required threshold in red dashed line\label{sub:fig:ToTd_working}}{\includegraphics[width=.45\textwidth]{thesis_figures/Setup/Ttd_deconvuluted.png}}
   \subcaptionbox{Example waveform which passes the MoPS algorithm.\label{sub:fig:MoPS_working}}{\includegraphics[width=.45\textwidth]{thesis_figures/Setup/MoPS.png}}
-  \caption{Functioning of ToTd trigger and an example of MoPS. Taken from~\cite{PierreAuger:2021hun}}
+  \caption{Functioning of ToTd trigger and an example of MoPS. Taken from~\cite{PierreAuger:2021hun}.}
   \label{fig:ToTd+MoPSworking}
 \end{figure}
 
@@ -172,7 +172,7 @@ The MoPS trigger~\cite{gap_note_2011} was implemented to achieve a similar goal 
   for ToT, ToTd, MoPS and TH.\label{sub:fig:Triiger_eff_infill}}{\includegraphics[width=.45\textwidth]{thesis_figures/Setup/Efficiency_triggers.png}}
   \hfill
   \subcaptionbox{The change in the triggering efficiency with zenith angle.\label{sub:fig:Trigger_eff_theta}}{\includegraphics[width=.45\textwidth]{thesis_figures/Setup/Triggering_efficiency_theta.png}}
-  \caption{Trigger efficiency for different triggers implemented at the Pierre Auger Observatory calculated using the SD-750 array for zenith angles below $60^{\circ}$. Taken from~\cite{gap_note_2017}}
+  \caption{Trigger efficiency for different triggers implemented at the Pierre Auger Observatory calculated using the SD-750 array for zenith angles below $60^{\circ}$. Taken from~\cite{gap_note_2017}.}
   \label{fig:Trigger_eff_infill}
 \end{figure}
 
@@ -185,7 +185,7 @@ The new triggers particularly improve the trigger efficiency and sensitivity for
   \subcaptionbox{ToT2C$_1$\& 3C$_2$\label{sub:fig:T3_config_1}}{\includegraphics[width=.45\linewidth]{thesis_figures/Setup/T3_config_1.png}}
   \hfill
   \subcaptionbox{2C$_1$\&3C$_2$\&4C$_4$\label{sub:fig:T3_config_2}}{\includegraphics[width=.45\linewidth]{thesis_figures/Setup/T3_config_2.png}}
-  \caption{Example of two possible T3 configurations. Taken from~\cite{PierreAuger:2010zof}}
+  \caption{Example of two possible T3 configurations. Taken from~\cite{PierreAuger:2010zof}.}
   \label{fig:T3_config}
 \end{figure}
 
@@ -242,7 +242,7 @@ This part acts as an input and consists of information about the individual dete
 \begin{figure}[t!]
   \centering
   \includegraphics[width=0.75\textwidth]{thesis_figures/Setup/Offline_schematic.png}
-  \caption{An Overview of the general structure of $\mathrm{\overline{Off}\underline{line}}$framework. Modified from ~\cite{Argiro:2007qg} }
+  \caption{An Overview of the general structure of $\mathrm{\overline{Off}\underline{line}}$framework. Modified from~\cite{Argiro:2007qg}. }
   \label{fig:Offline_schematic}
 \end{figure}
 
