Final pic changes for printing

--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -291,7 +291,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 
 \begin{figure}[t!]
   \centering
-  \includegraphics[width=14.5cm]{thesis_figures/CRnNu/UHE_nu_techniques.png}
+  \includegraphics[width=14.5cm]{thesis_figures/CRnNu/UHE_nu_techniques.pdf}
   \caption{Different detection techniques for UHE neutrinos. Ice and Water based Cherenkov detectors are sensitive to atmospheric, galactic neutrinos and some extragalactic neutrinos while radio and air shower detectors are sensitive to very high energy neutrinos with other techniques filling the gaps. The spectral indices of the different components are estimations. Taken from~\cite{Arguelles:2024xkx}}.
   \label{fig:UHE-nu-techniques}
 \end{figure}
